# Diploma_2025

./: analizing.py  convert_acdc_to_yolo.py  convert_acdc_to_yolo_2.py  docker-compose.yml  run_experiments.py  select_acdc_subset.py  selected_acdc_images_2000imgs.json  selected_acdc_images_800imgs.json  tests.ipynb  сonvert_coco_to_yolo_3.py
Build_YOLO_Image/: .dockerignore  Dockerfile
Weather_Distortions_Recognition/: pyproject.toml
Weather_Distortions_Recognition/src/development/: train.py  utils.py
Weather_Distortions_Recognition/tests/: experiments.json  main.py  utils.py
